Resolve conflicts, refactor, format.